--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -8,10 +8,14 @@ spring.application.name=account-service
 # This is the url to the configuration service that we will use to get our configuration
 spring.config.import=configserver:http://localhost:9999
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.url: jdbc:mysql://localhost:3306/account_server?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=username
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+
+server.port=7070
+security.sessions=never
+server.servlet.context-path=/auth
