--- a/activities-ratings/src/main/resources/application.properties
+++ b/activities-ratings/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fistToFive?useSSL=false&server
 spring.datasource.username=root
 spring.datasource.password=password
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
