added swagger docs, springfox configs, and fixed account service issues

--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.config.import=configserver:http://localhost:9999
 
 spring.datasource.url: jdbc:mysql://localhost:3306/account_server?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=kitty1
+spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
 
